# polychat

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.ollama.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml  release.yml
.streamlit/: config.toml
src/polychat/: __init__.py  app.py  cli.py
src/polychat/i18n/: __init__.py  en.json  pt_br.json
src/polychat/prompts/: qa.py
src/polychat/rag/: __init__.py  chain.py  embeddings.py  llm.py  prefs.py  splitter.py  vector_store.py
src/polychat/rag/loaders/: __init__.py  files.py  website.py  youtube.py
tests/: conftest.py
tests/unit/: test_app_ollama_error.py  test_chain.py  test_i18n.py  test_llm_factory.py  test_loaders_files.py  test_loaders_website.py  test_loaders_youtube.py  test_prefs.py  test_splitter.py  test_vector_store.py
