[project]
name = "polychat"
version = "0.4.0"
description = "RAG chatbot over PDFs, CSV, TXT, websites, and YouTube videos with pluggable LLMs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Leonardo Rivera", email = "leodrivera@gmail.com" }]

dependencies = [
  "streamlit>=1.50",
  "langchain>=1.2",
  "langchain-classic>=1.0",
  "langchain-core>=1.3",
  "langchain-community>=0.4",
  "langchain-text-splitters>=1.1",
  "langchain-openai>=1.1",
  "langchain-anthropic>=1.4",
  "langchain-groq>=1.1",
  "langchain-ollama>=1.1",
  "langchain-chroma>=1.1",
  "langchain-huggingface>=1.2",
  "sentence-transformers>=5.0",
  "chromadb>=1.5",
  "pypdf>=6.0",
  "beautifulsoup4>=4.13",
  "youtube-transcript-api>=1.2.4,<2",
  "python-dotenv>=1.1",
]

[project.scripts]
polychat = "polychat.cli:main"

[dependency-groups]
dev = [
  "pyright>=1.1.400",
  "ruff>=0.14",
  "pytest>=9.0",
  "pytest-cov>=7.0",
  "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/polychat"]

# ---------- Ruff ----------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF", "PL", "PT", "ANN"]
ignore = [
  "ANN401",  # allow Any where unavoidable (Streamlit / LangChain boundaries)
  "PLR0913", # allow many args in factories
  "PLC0415", # lazy imports are intentional in provider factories
  "PLW0603", # module-level locale fallback is intentional
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "PLR2004", "S101"]
"src/polychat/app.py" = ["PLR0915", "PLR0912", "E402"]  # long entrypoint; env setup must precede imports

# ---------- Pyright ----------
[tool.pyright]
include = ["src", "tests"]
exclude = ["**/__pycache__", "**/.venv", "**/node_modules"]
extraPaths = ["."]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingImports = "error"
reportMissingTypeStubs = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"
reportUnknownParameterType = "none"
reportPrivateUsage = "warning"

executionEnvironments = [
  { root = "tests", reportMissingTypeStubs = false, reportUnknownMemberType = false, reportUnknownArgumentType = false, reportUnknownVariableType = false, reportUnknownParameterType = false, reportMissingParameterType = false, reportGeneralTypeIssues = "warning", reportPrivateUsage = "none" },
]

# ---------- Pytest ----------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
  "integration: requires network or Ollama; opt-in via `-m integration`",
]
